# mjlab_microban

./: .gitignore  README.md  REWARD.md  policy.onnx  poses.pkl  pyproject.toml  tmp_pyproject.toml
src/mjlab_microban/: __init__.py
src/mjlab_microban/actuator/: __init__.py  bam_actuator.py  bam_params.py
src/mjlab_microban/robot/: make_reference.py  microban_constants.py
src/mjlab_microban/robot/microban/: additional.xml  config.json  no_slip.xml  robot.xml  robot_flattened.xml
src/mjlab_microban/robot/microban/assets/: ankle_dbl_block.part  ankle_dbl_block__configuration_right.scad  battery.part  battery.stl  breast.part  breast.stl  bts2_m2_6x8.part  chest.part  chest.stl  dbl_block.part  dc15_a01_horn_idle2_dummy.part  dc15_a01_idle_cap_dummy.part  femur.part  femur.stl  femur__configuration_left.scad  femur__configuration_right.scad  foot.part  head.part  head.stl  hip.part  hip.stl  humerus.part  humerus.stl  pelvis.part  pelvis.stl  radius.part  radius.stl  shoulder.part  shoulder.stl  spacer.part  stp39__configuration__2_2x8.part  stp39__configuration__2_2x8.stl  tibia.part  tibia.stl  tibia__configuration_left.scad  tibia__configuration_right.scad  trunk_top.part  trunk_top.stl  xl330.part  xl330.stl  (+2 more)
src/mjlab_microban/scripts/: export_onnx.py
src/mjlab_microban/tasks/: __init__.py  mdp.py  microban_velocity_env_cfg.py  reference.py
