[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"

[project]
name = "mjlab-microban"
version = "0.1.0"
description = "Microban RL environment for mjlab"
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "mjlab",
    "placo>=0.9.20",
]

[project.entry-points."mjlab.tasks"]
mjlab_booster = "mjlab_microban.tasks"

[tool.ruff]
src = ["src"]  # Helpful for recognizing first-party imports.
indent-width = 4
exclude = [
  "src/mjlab/third_party",
  "typings",
]

[tool.uv.sources]
mjlab = { git = "https://github.com/mujocolab/mjlab.git", rev = "e3ba8fb" }