[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"

[project]
name = "mjlab-microban"
version = "0.1.0"
description = "Microban RL environment for mjlab"
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
  "mjlab==1.3.0",
  "warp-lang==1.12.0",
  "placo>=0.9.20",
  "bam",
]

[project.entry-points."mjlab.tasks"]
mjlab_microban = "mjlab_microban.tasks"

[tool.ruff]
src = ["src"]  # Helpful for recognizing first-party imports.
indent-width = 4
exclude = [
  "src/mjlab/third_party",
  "typings",
]

[tool.uv.sources]
bam = { git = "ssh://git@github.com/rhoban/bam", branch = "bam" }

